GT-4.1: added rules tests and minor fixes
(cherry picked from commit b2dcb94dad3d17c9121743f8d946520b83154d5a)

(cherry picked from commit 57369846ed3060f2f4eef2cf2a2d2e0082016af0)