@@ -7,7 +7,6 @@ import org.junit.Test;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.List;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -48,7 +47,7 @@ public class TotalTimeOnGroundRuleTest {
     @Test
     public void testEmptySegments() {
         initializeRule = false;
-        Flight emptyFlight = new Flight(List.of());
+        Flight emptyFlight = new Flight(Arrays.asList());
 
         assertFalse(rule.isFlightValid(emptyFlight));
     }
